tests/syntax_error/fn_ret_missing_colon.err.out
error: fn_ret_missing_colon.err.li 1,8: unexpected token `int`, expecting colon or `pipe`
    1 | fn f() int {}
      |        ^^^
